// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiAccordion behavior closes when clicked twice 1`] = `
<EuiAccordion
  arrowDisplay="left"
  buttonElement="button"
  element="div"
  id="18"
  initialIsOpen={false}
  isLoading={false}
  isLoadingMessage={false}
  paddingSize="none"
>
  <div
    className="euiAccordion"
  >
    <div
      className="euiAccordion__triggerWrapper"
    >
      <EuiButtonIcon
        aria-controls="18"
        aria-expanded={false}
        aria-labelledby="generated-id"
        className="euiAccordion__iconButton"
        color="text"
        iconType="arrowRight"
        onClick={[Function]}
        tabIndex={-1}
      >
        <button
          aria-controls="18"
          aria-expanded={false}
          aria-labelledby="generated-id"
          className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
        >
          <EuiIcon
            aria-hidden="true"
            className="euiButtonIcon__icon"
            color="inherit"
            size="m"
            type="arrowRight"
          >
            <span
              aria-hidden="true"
              className="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="arrowRight"
              size="m"
            />
          </EuiIcon>
        </button>
      </EuiButtonIcon>
      <button
        aria-controls="18"
        aria-expanded={false}
        className="euiAccordion__button"
        id="generated-id"
        onClick={[Function]}
        type="button"
      >
        <span
          className="euiAccordion__buttonContent"
        />
      </button>
    </div>
    <div
      aria-labelledby="generated-id"
      className="euiAccordion__childWrapper"
      id="18"
      role="region"
      tabIndex={-1}
    >
      <EuiResizeObserver
        onResize={[Function]}
      >
        <div>
          <div
            className=""
          >
            <p>
              You can not see me.
            </p>
          </div>
        </div>
      </EuiResizeObserver>
    </div>
  </div>
</EuiAccordion>
`;

exports[`EuiAccordion behavior opens when clicked once 1`] = `
<EuiAccordion
  arrowDisplay="left"
  buttonElement="button"
  element="div"
  id="16"
  initialIsOpen={false}
  isLoading={false}
  isLoadingMessage={false}
  paddingSize="none"
>
  <div
    className="euiAccordion euiAccordion-isOpen"
  >
    <div
      className="euiAccordion__triggerWrapper"
    >
      <EuiButtonIcon
        aria-controls="16"
        aria-expanded={true}
        aria-labelledby="generated-id"
        className="euiAccordion__iconButton euiAccordion__iconButton-isOpen"
        color="text"
        iconType="arrowRight"
        onClick={[Function]}
        tabIndex={-1}
      >
        <button
          aria-controls="16"
          aria-expanded={true}
          aria-labelledby="generated-id"
          className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton euiAccordion__iconButton-isOpen"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
        >
          <EuiIcon
            aria-hidden="true"
            className="euiButtonIcon__icon"
            color="inherit"
            size="m"
            type="arrowRight"
          >
            <span
              aria-hidden="true"
              className="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="arrowRight"
              size="m"
            />
          </EuiIcon>
        </button>
      </EuiButtonIcon>
      <button
        aria-controls="16"
        aria-expanded={true}
        className="euiAccordion__button"
        id="generated-id"
        onClick={[Function]}
        type="button"
      >
        <span
          className="euiAccordion__buttonContent"
        />
      </button>
    </div>
    <div
      aria-labelledby="generated-id"
      className="euiAccordion__childWrapper"
      id="16"
      role="region"
      tabIndex={-1}
    >
      <EuiResizeObserver
        onResize={[Function]}
      >
        <div>
          <div
            className=""
          >
            <p>
              You can see me.
            </p>
          </div>
        </div>
      </EuiResizeObserver>
    </div>
  </div>
</EuiAccordion>
`;

exports[`EuiAccordion behavior opens when div is clicked if element is a div 1`] = `
<EuiAccordion
  arrowDisplay="left"
  buttonElement="button"
  element="div"
  id="17"
  initialIsOpen={false}
  isLoading={false}
  isLoadingMessage={false}
  paddingSize="none"
>
  <div
    className="euiAccordion euiAccordion-isOpen"
  >
    <div
      className="euiAccordion__triggerWrapper"
    >
      <EuiButtonIcon
        aria-controls="17"
        aria-expanded={true}
        aria-labelledby="generated-id"
        className="euiAccordion__iconButton euiAccordion__iconButton-isOpen"
        color="text"
        iconType="arrowRight"
        onClick={[Function]}
        tabIndex={-1}
      >
        <button
          aria-controls="17"
          aria-expanded={true}
          aria-labelledby="generated-id"
          className="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton euiAccordion__iconButton-isOpen"
          disabled={false}
          onClick={[Function]}
          tabIndex={-1}
          type="button"
        >
          <EuiIcon
            aria-hidden="true"
            className="euiButtonIcon__icon"
            color="inherit"
            size="m"
            type="arrowRight"
          >
            <span
              aria-hidden="true"
              className="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="arrowRight"
              size="m"
            />
          </EuiIcon>
        </button>
      </EuiButtonIcon>
      <button
        aria-controls="17"
        aria-expanded={true}
        className="euiAccordion__button"
        id="generated-id"
        onClick={[Function]}
        type="button"
      >
        <span
          className="euiAccordion__buttonContent"
        />
      </button>
    </div>
    <div
      aria-labelledby="generated-id"
      className="euiAccordion__childWrapper"
      id="17"
      role="region"
      tabIndex={-1}
    >
      <EuiResizeObserver
        onResize={[Function]}
      >
        <div>
          <div
            className=""
          >
            <p>
              You can see me.
            </p>
          </div>
        </div>
      </EuiResizeObserver>
    </div>
  </div>
</EuiAccordion>
`;

exports[`EuiAccordion is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiAccordion testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="0"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="0"
      aria-expanded="false"
      class="euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper"
    id="0"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props arrowDisplay none is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="9"
      aria-expanded="false"
      class="euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper"
    id="9"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props arrowDisplay right is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="8"
      aria-expanded="false"
      class="euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
    <button
      aria-controls="8"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton euiAccordion__iconButton--right"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper"
    id="8"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props arrowProps is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="10"
      aria-expanded="false"
      aria-label="aria-label"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton testClass1 testClass2"
      data-test-subj="test subject string"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="10"
      aria-expanded="false"
      class="euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper"
    id="10"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props buttonContent is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="3"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="3"
      aria-expanded="false"
      class="euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      >
        <div>
          Button content
        </div>
      </span>
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper"
    id="3"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props buttonContentClassName is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="2"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="2"
      aria-expanded="false"
      class="euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent button content class name"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper"
    id="2"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props buttonElement is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="5"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <div
      aria-controls="5"
      aria-expanded="false"
      class="euiAccordion__button"
      id="generated-id"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </div>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper"
    id="5"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props buttonProps is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="4"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="4"
      aria-expanded="false"
      aria-label="aria-label"
      class="euiAccordion__button testClass1 testClass2"
      data-test-subj="test subject string"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper"
    id="4"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props element is rendered 1`] = `
<fieldset
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="1"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton"
      tabindex="0"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <legend
      aria-controls="1"
      aria-expanded="false"
      class="euiAccordion__button"
      id="generated-id"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </legend>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper"
    id="1"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</fieldset>
`;

exports[`EuiAccordion props extraAction is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="6"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="6"
      aria-expanded="false"
      class="euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
    <div
      class="euiAccordion__optionalAction"
    >
      <button>
        Extra action
      </button>
    </div>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper"
    id="6"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props forceState closed is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="11"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="11"
      aria-expanded="false"
      class="euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper"
    id="11"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      >
        <p>
          You can not see me
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props forceState open is rendered 1`] = `
<div
  class="euiAccordion euiAccordion-isOpen"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="12"
      aria-expanded="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton euiAccordion__iconButton-isOpen"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="12"
      aria-expanded="true"
      class="euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper"
    id="12"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      >
        <p>
          You can see me
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props initialIsOpen is rendered 1`] = `
<div
  class="euiAccordion euiAccordion-isOpen"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="7"
      aria-expanded="true"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton euiAccordion__iconButton-isOpen"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="7"
      aria-expanded="true"
      class="euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper"
    id="7"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class=""
      >
        <p>
          You can see me.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props isLoading is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="14"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="14"
      aria-expanded="false"
      class="euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper"
    id="14"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children-isLoading"
      />
    </div>
  </div>
</div>
`;

exports[`EuiAccordion props isLoadingMessage is rendered 1`] = `
<div
  class="euiAccordion"
>
  <div
    class="euiAccordion__triggerWrapper"
  >
    <button
      aria-controls="15"
      aria-expanded="false"
      aria-labelledby="generated-id"
      class="euiButtonIcon euiButtonIcon--text euiButtonIcon--empty euiButtonIcon--xSmall euiAccordion__iconButton"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="arrowRight"
      />
    </button>
    <button
      aria-controls="15"
      aria-expanded="false"
      class="euiAccordion__button"
      id="generated-id"
      type="button"
    >
      <span
        class="euiAccordion__buttonContent"
      />
    </button>
  </div>
  <div
    aria-labelledby="generated-id"
    class="euiAccordion__childWrapper"
    id="15"
    role="region"
    tabindex="-1"
  >
    <div>
      <div
        class="euiAccordion__children-isLoading"
      >
        <span
          class="euiLoadingSpinner euiLoadingSpinner--medium euiAccordion__spinner"
        />
        <span>
          Please wait
        </span>
      </div>
    </div>
  </div>
</div>
`;
